--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -28,8 +28,7 @@ jobs:
     
     - name: Run tests
       run: |
-        cd src
-        python -m unittest test.py -v
+        python -m pytest src/tests/ -v --tb=short
 
   build-and-push:
     needs: test
@@ -52,14 +51,14 @@ jobs:
         context: .
         push: true
         tags: |
-          eltonaloys/flask-ci-cd-app:latest
-          eltonaloys/flask-ci-cd-app:${{ github.sha }}
+          your-username/flask-ci-cd-app:latest
+          your-username/flask-ci-cd-app:${{ github.sha }}
     
     - name: Test Docker image
       run: |
         docker run -d --name test-app -p 3000:3000 \
           -e ENV=production -e VERSION=1.0.0 \
-          eltonaloys/flask-ci-cd-app:latest
+          your-username/flask-ci-cd-app:latest
         
         sleep 10
         
